# rinha-de-backend-2024-rust

./: .gitignore  Cargo.toml  Dockerfile
src/: apperror.rs  handlers.rs  main.rs  models.rs
