[package]
name = "rs-rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.11", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
